davinci: specify /system_root as mount point on the recovery
Signed-off-by: daniml3 <danimoral1001@gmail.com>

--- a/rootdir/etc/init.recovery.qcom.rc
+++ b/rootdir/etc/init.recovery.qcom.rc
@@ -2,6 +2,8 @@ on fs
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
 
+    mkdir /system_root
+
 on init
     setprop sys.usb.configfs 1
     setprop sys.usb.controller ${ro.boot.usbcontroller}
