--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -156,6 +156,9 @@ on property:sys.boot_completed=1
     swapon_all /vendor/etc/fstab.qcom
     write /proc/sys/vm/swappiness 100
 
+    # Start the Power HAL
+    setprop vendor.powerhal.init 1
+
 service nqnfc_1_2_hal_service /vendor/bin/hw/vendor.nxp.hardware.nfc@1.2-service
     class hal
     user nfc
