--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -145,5 +145,23 @@
                 android:resource="@string/kcal_settings_summary" />
         </activity>
 
+        <activity
+            android:name=".fingerprint.FingerprintSettingsActivity"
+            android:label="@string/advanced_fingerprint_settings"
+            android:theme="@android:style/Theme.DeviceDefault.Settings">
+            <intent-filter>
+                <action android:name="com.android.settings.action.IA_SETTINGS" />
+            </intent-filter>
+
+            <meta-data
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.security" />
+            <meta-data
+                android:name="com.android.settings.summary"
+                android:resource="@string/summary_empty" />
+            <meta-data
+                android:name="com.android.settings.order"
+                android:value="20" />
+        </activity>
     </application>
 </manifest>
