davinci: rootdir: set fod.should_boost_brightness to true after using WFD
* Marking the FOD layer after using WFD (allocating HWC for VDS) does not work at the moment
* For fixing this, boost the screen brightness instead of marking the layer

Signed-off-by: daniml3 <danimoral1001@gmail.com>
Change-Id: I8220bf080e6434028edb3af6ba617a0749c4d499

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -195,6 +195,12 @@ on property:init.svc.vendor.per_mgr=running
 on property:sys.shutdown.requested=*
     stop vendor.per_proxy
 
+on property:vendor.wfdservice=enable
+    setprop fod.should_boost_brightness true
+
+on property:vendor.wfdservice=disable
+    setprop fod.should_boost_brightness true
+
 on charger
     wait /dev/block/platform/soc/1da4000.ufshc/by-name/system
     mount ext4 /dev/block/platform/soc/1da4000.ufshc/by-name/system / ro barrier=1
